--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive_generator: ^2.0.1
   scratcher: ^2.5.0
   razorpay_flutter: ^1.3.7
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
